fix section skills on mobile

--- a/src/components/card/Card.module.scss
+++ b/src/components/card/Card.module.scss
@@ -75,4 +75,13 @@
     border: 1px solid rgba(255, 255, 255, 0.1);
     white-space: nowrap;
   }
+  &__logo {
+    width: 96px;
+    height: 40px;
+  }
+  &__logo--default {
+    border-radius: 5px;
+    width: 40px;
+    height: 40px;
+  }
 }
